--- a/hw4/nginx-rev/nginx.conf
+++ b/hw4/nginx-rev/nginx.conf
@@ -1,13 +1,21 @@
+
 worker_processes 1;
 
 events { worker_connections 1024; }
 
 http {
+
+
+
+
     sendfile on;
+
     server {
+
         listen 8888;
+
         location / {
-            proxy_pass http://web1:8080/activity/;
+            proxy_pass http://www.cs.ucdavis.edu;
 	    proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
